# adjacent_element_iterator

./: .gitignore  README.md  adjacent_element_iterator.hpp  adjacent_element_range.hpp
unittests/: CMakeLists.txt  main.cpp  random_access.cpp
